--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "AEIOU",
         "Aniel",
         "Denson",
+        "geeksforgeeks",
         "Jheirom",
         "Miku",
         "Usman"
